excited to finish my first website on git

--- a/index.html
+++ b/index.html
@@ -9,16 +9,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span class="name-highlight">Zahid</span> Website</h1>
+            <h1><span class="orange-highlight">Zahid</span> Website</h1>
             <h3>World-class professional web developer</h3>
             <p>lakdsjf lasdkfj;lasdf jl;asdkfjla;sdkfj lsadkfj sldfjsladkfj sladkfj sladkfj lsadkfjasldkfjsldfjasldfkjas;ldkfj asdlfkjsadlfk sadlfkj asdl;fk jasdl;fkj s;aldkfj sal;dkfjas;ldfjasldkfjsadlkfjasldfkj asdlfkjsdalfj asdlfkjsadl;fj ;alksd jflaskdfj saldkfj sdalkfjsdlfjlsdfdsalkfjaslkd</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero">Hire Me</a>
         </div>
         <div class="half-width">    
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>World's number one developer</h3>
+            <p>lakdjf alsdkfj;alsdf j;alsdkfja;sldfjasldfj asdlkfj;lasdkfjlasdkfjlasdkfjlsadkfjalsdfj lsadkfj asldfj asldkfj;lsadf asldfj asdj asdjf asdlfj asdlfj asdlkfj asdljf asdlj asdlkj sd;alkj lsdkj sdlkj sdlkj lsdkj dslk ;lsdk</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero">Download resume</a>
+
+        </div>
+
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack web developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Pro level Web developer</h3>
+            <p>lakdjf alsdjfalsf jlsdfj lasdkfj lsadkfja sldfjas l;dkf jasl;dfj l;asdk jfasl;df jsladkfj asldkfj saldk fj;sla kdfjal ;sdfjs ladkfj as;ldkf jasldkfj as;ldkf ja;lsdk fjas;ldkfjalsd kfjas;ldkfja sldf jsladkjf;al sdfjl; asdkfjasldf kjalsdfjasldfj</p>
+
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby web develper</h2>
+            <h3 class="orange-highlight">2020-2021 | Programming hero learner</h3>
+            <p>lakdjf alsdjfalsf jlsdfj lasdkfj lsadkf jasldfj asl;dkfja sl;dfj l;as dkjfa sl;dfjs ladkfjasl dkfj saldk fj;sla dfjal;sdfjs ladkfj as;ldkf ja sldkfj as; ldkfja; lsdkfjas ;ldkf ja lsdkfjas ;ldkfj asldfj sladkjf; alsdfjl;asdk fjasldfk jalsdfj asldfj</p>
+
+        </div>
+
+    </section>
+    <footer>
+        <p>© Zahid 2021, all right reserved</p>
+    </footer>
 </body>
 </html>
